// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Warning does not render without a message 1`] = `null`;

exports[`Warning matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  background: #ffeb3b;
  color: #000;
}

.c1 {
  margin-top: 2px;
}

.c3 {
  margin: 0 0 0 8px;
}

.c2 {
  width: 16px;
  height: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<div
  className="c0"
>
  <svg
    aria-hidden={true}
    className="yoast-svg-icon yoast-svg-icon-exclamation-triangle c1 c2"
    fill="currentColor"
    focusable="false"
    role="img"
    size="16px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1024 1375v-190q0-14-9.5-23.5T992 1152H800q-13 0-22.5 9.5T768 1185v190q0 14 9.5 23.5t22.5 9.5h192q13 0 22.5-9.5t9.5-23.5zm-2-374l18-459q0-12-10-19-13-11-24-11H786q-11 0-24 11-10 7-10 21l17 457q0 10 10 16.5t24 6.5h185q14 0 23.5-6.5t10.5-16.5zm-14-934l768 1408q35 63-2 126-17 29-46.5 46t-63.5 17H128q-34 0-63.5-17T18 1601q-37-63-2-126L784 67q17-31 47-49t65-18 65 18 47 49z"
    />
  </svg>
  <div
    className="c3"
  >
    This is a warning message
    <a
      href="https://yoast.com"
      target="_blank"
    >
      Go to Yoast.com
    </a>
    <p>
      React will render this
    </p>
  </div>
</div>
`;

exports[`Warning with a right to left language matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  background: #ffeb3b;
  color: #000;
}

.c1 {
  margin-top: 2px;
}

.c3 {
  margin: 0 8px 0 0;
}

.c2 {
  width: 16px;
  height: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<div
  className="c0"
>
  <svg
    aria-hidden={true}
    className="yoast-svg-icon yoast-svg-icon-exclamation-triangle c1 c2"
    fill="currentColor"
    focusable="false"
    role="img"
    size="16px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1024 1375v-190q0-14-9.5-23.5T992 1152H800q-13 0-22.5 9.5T768 1185v190q0 14 9.5 23.5t22.5 9.5h192q13 0 22.5-9.5t9.5-23.5zm-2-374l18-459q0-12-10-19-13-11-24-11H786q-11 0-24 11-10 7-10 21l17 457q0 10 10 16.5t24 6.5h185q14 0 23.5-6.5t10.5-16.5zm-14-934l768 1408q35 63-2 126-17 29-46.5 46t-63.5 17H128q-34 0-63.5-17T18 1601q-37-63-2-126L784 67q17-31 47-49t65-18 65 18 47 49z"
    />
  </svg>
  <div
    className="c3"
  >
    This is a warning message
    <a
      href="https://yoast.com"
      target="_blank"
    >
      Go to Yoast.com
    </a>
    <p>
      React will render this
    </p>
  </div>
</div>
`;
